--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  background-color: #f8f9fa;
+  background-color: #edd9d9;
   color: #333;
   line-height: 1.6;
   padding-top: 60px; /* Space for fixed navbar */
@@ -25,7 +25,7 @@ body {
 
 /* ====== Navigation Bar ====== */
 nav {
-  background-color: #007bff;
+  background-color: #008c45;
   color: white;
   padding: 15px 20px;
   position: fixed;
@@ -54,6 +54,7 @@ nav a:hover {
   width: 90%;
   max-width: 800px;
   margin: auto;
+  margin-top: 45px;
   padding: 20px;
   background: white;
   border-radius: 8px;
@@ -65,7 +66,7 @@ button,
 .btn {
   display: inline-block;
   padding: 10px 15px;
-  background-color: #007bff;
+  background-color: #008c45;
   color: white;
   border: none;
   border-radius: 5px;
@@ -75,7 +76,7 @@ button,
 
 button:hover,
 .btn:hover {
-  background-color: #0056b3;
+  background-color: #006f38;
 }
 
 /* ====== Forms ====== */
@@ -183,11 +184,11 @@ footer {
 }
 
 .btn-edit {
-  background-color: #007bff;
+  background-color: #f0b867;
 }
 
 .btn-edit:hover {
-  background-color: #0056b3;
+  background-color: #d3a15b;
 }
 
 .btn-delete {
@@ -239,22 +240,6 @@ footer {
   font-weight: bold;
   border: none;
   cursor: pointer;
-}
-
-.btn-primary {
-  background-color: #007bff;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
-}
-
-.btn-secondary {
-  background-color: #6c757d;
-}
-
-.btn-secondary:hover {
-  background-color: #545b62;
 }
 
 .btn-back {
